# EvalForge

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
adapters/: anthropic_adapter.py  base.py  factory.py  huggingface_adapter.py  ollama_adapter.py  openai_adapter.py
api/: main.py
api/routers/: evaluate.py  leaderboard.py  results.py  tasks.py
configs/: models.yaml  scoring.yaml
scoring/: __init__.py  deterministic.py  dispatcher.py  llm_judge.py
scripts/: api_start.sh  api_status.sh  api_stop.sh  ui_start.sh  ui_status.sh  ui_stop.sh
tasks/: analogical_reasoning_001.yaml  instruction_following_001.yaml  loader.py  logical_deduction_001.yaml  working_memory_001.yaml
tests/smoke/: run_all.py  smoke_adapters.py  smoke_api.py  smoke_scoring_deterministic.py  smoke_scoring_llm_judge.py
tracking/: __init__.py  mlflow_tracker.py
ui/: app.py
ui/pages/: drilldown.py  leaderboard.py  radar.py
