[project]
name = "evalforge"
version = "0.1.0"
description = "LLM Evaluation Intelligence Platform"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["adapters*", "scoring*", "tracking*", "api*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100